--- a/graphql/package.json
+++ b/graphql/package.json
@@ -19,6 +19,8 @@
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
     "graphql-yoga": "^3.9.1",
+    "http": "^0.0.1-security",
+    "node-fetch": "^3.3.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^2.0.0-beta.2"
   },
